# scaffold-cache

./: .gitignore  Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md
.github/workflows/: ci.yml
benches/: cache_bench.rs
docs/: architecture.md
src/: cache.rs  config.rs  entry.rs  frequency.rs  lib.rs  loader.rs  shard.rs  stats.rs  weight.rs
tests/: async_loader.rs  basic.rs  completeness.rs  concurrency.rs  stress_test.rs  weighted.rs
