[package]
name = "scaffold-cache"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A high-performance sharded in-process cache for Rust"
repository = "https://github.com/metalurgical/scaffold-cache"
readme = "README.md"
keywords = ["async", "cache", "concurrent", "performance"]
categories = ["asynchronous", "caching", "concurrency"]
authors = ["metalurgical"]

[[bench]]
harness = false
name = "cache_bench"

[dependencies]
ahash = "0.8"
async-trait = { version = "0.1", optional = true }
parking_lot = "0.12"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "time"
], optional = true }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time"
] }

[features]
default = []
async-loader = ["async-trait", "tokio"]
